[tool.poetry]
name = "reactpy-forms"
version = "0.0.3"
description = ""
authors = ["Steve Jones <jonesst2608@gmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/stevej2608/reactpy-forms/README.md"
repository = "https://github.com/stevej2608/reactpy-forms"
include = ["reactpy-forms/*.py"]


[tool.poetry.dependencies]
python = "^3.11"
reactpy = "^1.0.2"

[tool.poetry.group.dev.dependencies]
pytest-timeout = "2.2.0"
fastapi = "^0.109.0"
playwright = "1.41.1"
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
starlette = ">=0.13.6"
trio = "^0.24.0"
twine = "^4.0.2"
uvicorn = {extras = ["standard"], version = ">=0.19.0"}


[tool.ruff]
# https://docs.astral.sh/ruff/configuration/
# https://marketplace.visualstudio.com/items?itemName=charliermarsh.ruff

line-length = 120

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md#sample-pyprojecttoml-file
typeCheckingMode = "strict"
pythonVersion = "3.11"


[tool.pytest.ini_options]
testpaths = "tests"
log_cli_level = "INFO"
filterwarnings = "ignore::DeprecationWarning"

# -r Show extra test summary info as specified by chars: 
#   (s)kipped, 
#   (x)failed, 
#   (X)passed, 
# addopts = "-rsxX"

# asyncio_mode = "auto"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
